# ask-data-agent

./: .gitignore  README.md  ask-data-agent  deploy-ali.sh  main.py  pyproject.toml  vercel.json
api/: index.py
backend/: main.py  requirements.txt
doc/: BRD Template for Data Analyst Project (Data Visualization & Insight Analysis).md
doc/output/: test_brd.md
doc/superpowers/plans/: 2026-04-05-ask-data-implementation-plan.md
doc/superpowers/specs/: 2026-04-05-ask-data-frontend-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
