[tool.uv.index]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
[project]
name = "ask-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "jinja2>=3.1.3",
    "dotenv>=0.9.9",
]
